# bn_4tie

./: .env.example  .gitignore  .replit  alembic.ini  package-lock.json  package.json  pyproject.toml
apps/api/: alembic.ini  database.py  main.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260223_000001_phase1_initial.py  20260223_000002_strategy_version.py  20260223_000003_paper_trade_fields.py
apps/mobile/: App.tsx  README.md  app.json  package.json
apps/worker/: celery_app.py
attached_assets/: Pasted-You-are-Replit-AI-Create-a-production-grade-monorepo-fo_1771795963444.txt
client/: requirements.md
client/src/: App.tsx  index.css
client/src/app/: navigation.ts  routes.tsx
client/src/components/: CreateBotDialog.tsx
client/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
client/src/features/bots/pages/: BotDetailPage.tsx
client/src/features/dashboard/components/: CreateBotDialog.tsx
client/src/features/dashboard/pages/: DashboardPage.tsx
client/src/features/jobs/pages/: JobsPage.tsx
client/src/features/settings/pages/: SettingsPage.tsx
client/src/features/trades/pages/: TradesPage.tsx
client/src/hooks/: use-sse.ts  use-trading-api.ts
client/src/lib/: format.ts
client/src/pages/: BotDetail.tsx  Dashboard.tsx  Jobs.tsx  Trades.tsx
client/src/styles/: tokens.css
docs/: RUN_LOCAL.md  SPEC.md
migrations/: env.py
migrations/versions/: 899183a5f7f0_initial_schema.py
scripts/: acceptance.sh
