[project]
name = "bn-4tie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "ccxt>=4.5.39",
    "celery>=5.6.2",
    "fastapi>=0.131.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.41.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]
exclude = [
    "client*",
    "storage*",
    "attached_assets*",
    "docs*",
    ".local*",
    ".qodo*",
]
